main.css
body, html {
	margin:0;
	padding:0;

	font-family: 'Montserrat', sans-serif;
	font-weight: 300;
	color: #0b1a2b;

	box-sizing: border-box;
}

#container {
	
}

.inner-container {
	margin-left: auto;
	margin-right: auto;

	border-left: 1px dashed lightgrey;
	border-right: 1px dashed lightgrey;

	height: 100%;
	width: 1440px;
}

h1 {
	text-transform: uppercase;
	text-align: center;

	margin: 0;
	
	font-weight: 500;
	font-size: 30px;
	letter-spacing: 0.9px;
}


/* ***** SECTIONS ***** */

#menu {
	background-color: #ffffff;
 	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);

 	z-index: 1;

 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;

	height: 50px;
	line-height: 50px;
}

#menu span {
	display: inline-block;
	vertical-align: middle;
	line-height: normal;

	padding-left: 9px;
}

#menu a {
	color: #0b1a2b;
	margin-right: 27px;

	font-size: 14px;
	letter-spacing: 0.4px;
	text-decoration: none;
}

#menu a:active {
	margin-right: 27px;

	font-weight: 600;
	text-decoration: underline;
}

#header {
	background-image: url('img/wireframes.jpeg');
	background-size: cover;
	
	position: relative;

	margin-top: 50px;

	height: 638px;
	width: 100%;
}

#header-overlay {
	opacity: 0.85;
	background-color: #0b1a2b;

	height: 100%;
	width: 100%;

	position: absolute;
}

#header .inner-container {
	z-index: 1;
	position: relative;
	text-align: center;;
}

#header h1 {
	border-top: solid 1px #ffffff;
	display: inline-block;

	padding-top: 14px;
	margin-top: 23px;
	width: 430px;
	font-size: 48px;
	font-weight: 300;
	letter-spacing: 1.5px;
	color: #759bbf;
}

#header h2 {
	margin-top: 4px;
	font-size: 30px;
	font-weight: 300;
	font-style: italic;
	letter-spacing: 0.9px;
	color: #ffffff;
}

#header .logo {
	width: 107px;
	height: 105px;

	margin-top: 106px;
}

#whatido {
	height: 674px;
}

#whatido h1 {
	padding-top: 30px;
}

#about {
	background-color: #0b1a2b;
	height: 493px;
	color: #ffffff;
}

#about h1 {
	padding-top: 44px;
}

#portfolio {
	height: 674px;
}

#portfolio h1 {
	padding-top: 44px;
}

#contact {
	background-image: url('img/desk.jpeg');
	background-size: cover;
	height: 640px;
}

#contact > .inner-container {
	box-sizing: border-box;
	padding-top: 181px;
}

#contact > div > div {
	background-color: white;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	position: relative;

	width: 673px;
	height: 361px;
}

#contact h1 {
	font-size: 30px;
	font-weight: 300;
	letter-spacing: 0.9px;
	text-align: center;
	border-bottom: solid 1px #0b1a2b;
	margin-left: auto;
	margin-right: auto;

	width: 237px;
	padding-top: 44px;
	padding-bottom: 3px;
}

#contact .text {
	margin-bottom: 0;

	margin-top: 25px;
	font-size: 16px;
	font-weight: 300;
	line-height: 1.25;
	letter-spacing: 0.5px;
}

#contact .detail {
	margin-bottom: 0;

	margin-top: 30px;
	font-size: 36px;
	font-weight: 300;
	line-height: 1.44;
	letter-spacing: 1.1px;
}

#contact .linkedin {
	border: 0;
	position: absolute;

	bottom: 21px;
	width: 30px;
	height: 30px;

	left: 0;
	right: 0;
	margin: 0 auto;
}

#footer {
	background-color: #e4e4e4;
	text-align: center;

	font-size: 12px;
	letter-spacing: 0.4px;

	height: 50px;
	line-height: 50px;
}

#footer span {
	display: inline-block;
	vertical-align: middle;
	line-height: normal;
}

